bpo-35259: Limit `Py_FinalizeEx()` to `Py_LIMITED_API >= 0x03060000`. (GH-10620) (GH-11269)

(cherry picked from commit 3e8f962e63c2f929604443531a9a3aced242f3e8)

Co-authored-by: Arthur Neufeld <aneufeld@seinesoftware.ca>